@@ -5,6 +5,7 @@ Next version:
 
 2.6 (????-??-??)
 
+* Tabs!
 * support table of contents and links in ebook UI
 * added a document measurement helper (invoke by pressing M)
 * swapped keybindings:
@@ -13,7 +14,8 @@ Next version:
 * deprecated the browser plugin (remains installed if used)
 * support LZMA and PPMd compression in Comic Book (CBZ) files
 * allow saving Comic Book files as PDF
-* new advanced settings: UseTabs (to be exposed eventually), ShowSingleTab, FullPathInTitle
+* new advanced settings: ShowSingleTab, FullPathInTitle, TabBarAsTitleBar,
+  UseSysColors (no longer exposed through the Options dialog)
 * replaced non-free UnRAR with a free RAR extraction library
   (if some CBR files fail to open for you, please download unrar.dll from
   http://www.rarlab.com/rar_add.htm and place it alongside SumatraPDF.exe)
